--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header {
 }
 
 .banner {
-  background-image: url("images/carsock.jpg");
+  background-image: url("/images/carsock.jpg");
   height: 50%;
   background-position: center;
   background-repeat: no-repeat;
