--- a/style.css
+++ b/style.css
@@ -1,43 +1,41 @@
 /* Changing the color of the background */
 body {
-    background-color:#FFFFFF;
+    background-color:#282828;
 }
 
-.center{
-    color: #23272a;
-    font-family: Monospace;
-    font-size: 1.2em; /* Relative Unit 1 */
-    font-weight: bold;
-    text-align: center;
-}
-
-header {
+nav {
   position: fixed;
   width: 100%;
   top: 0;
   left: 0;
-  background-color: #1d2021;
-  color: white;
+  background-color: #32302f;
+  color: #98971a;
   font-family: Monospace;
+  z-index: 1;
 }
 
 .banner {
   background-image: url("/images/carsock.jpg");
   height: 50%;
+  width: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   font-family: Monospace;
   position: relative;
+  background-color: #282828;
+  z-index: 0;
 }
 
 .banner-text {
   text-align: center;
   position: absolute;
+  font-size: 20px;
+  font-family: Monospace;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: white;
+  color: #7c6f64;
 }
 
 ul {
@@ -45,7 +43,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #666;
+  background-color: #32302f;
 }
 
 li {
@@ -54,9 +52,10 @@ li {
 
 li a {
   display: block;
-  color: white;
+  color: #a89984;
   text-align: center;
   padding: 14px 16px;
+  font-size: 15px;
   text-decoration: none;
 }
 
@@ -70,14 +69,4 @@ footer {
     font-size: 2em;
     font-weight: bold;
     text-align: center;
-}
-
-h1 {
-    color: #A9A9A9;
-    margin-left: 1px; /* Absolute Unit 1 */
-}
-
-h2 {
-    color: #2c2f33;
-    margin-left: 1px; /* Absolute Unit 2 */
 }
