--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     background-color:#282828;
 }
 
+/* Max width */
 nav {
   position: fixed;
   width: 100%;
@@ -12,10 +13,13 @@ nav {
   color: #98971a;
   font-family: Monospace;
   z-index: 1;
+  max-width: 100%;
 }
 
+/* Longhand border, margin, and padding notation */
+/* Width and height */
+/* Relative positioning */
 .banner {
-  background-image: url("/images/carsock.jpg");
   height: 50%;
   width: 100%;
   background-position: center;
@@ -25,23 +29,46 @@ nav {
   position: relative;
   background-color: #282828;
   z-index: 0;
+  border-width: 1px
+  margin-top: 0em;
+  padding-top: 0em;
 }
 
+/* Max width and height*/
+.banner-image {
+  width: 100%;
+  max-height: 50%;
+  height: 30%;
+  object-fit: cover;
+}
+
+/* Three cases of relative unit lengths */
+/* Shorthand border, margin, and padding notations*/
+/* Text color, text align */
+/* Absolute positioning */
 .banner-text {
   text-align: center;
   position: absolute;
-  font-size: 20px;
-  font-family: Monospace;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #7c6f64;
+  font-size: 1.5em;
+  margin: 0em;
+  padding: 0em;
+  border: 0em;
+  font-family: Monospace;
+  color: #ebdbb2;
+}
+
+/* Text decoration */
+.banner-subtitle {
+  text-decoration: underline;
 }
 
 ul {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+  margin: 0em;
+  padding: 0em;
   overflow: hidden;
   background-color: #32302f;
 }
@@ -50,6 +77,8 @@ li {
   float: right;
 }
 
+/* Three cases of absolute unit lengths */
+/* Display example 1*/
 li a {
   display: block;
   color: #a89984;
@@ -59,9 +88,14 @@ li a {
   text-decoration: none;
 }
 
-/* Change the link color to #111 (black) on hover */
+/* Psuedo-class: hover*/
 li a:hover {
   background-color: #3c3836;
+}
+
+/* Display example 2*/
+.obscene {
+    display:none;
 }
 
 footer {
