--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/* Universal selector */
+* {
+    border: none;
+}
 /* Changing the color of the background */
 body {
     background-color:#282828;
@@ -18,6 +22,7 @@ nav {
 /* Longhand border, margin, and padding notation */
 /* Width and height */
 /* Relative positioning */
+/* Class selector */
 .banner {
   height: 50%;
   width: 100%;
@@ -60,10 +65,12 @@ nav {
 }
 
 /* Text decoration */
-.banner-subtitle {
+/* ID Selector */ 
+#banner-subtitle {
   text-decoration: underline;
 }
 
+/* Element Selector */ 
 ul {
   list-style-type: none;
   margin: 0em;
@@ -77,8 +84,9 @@ li {
 }
 
 /* Three cases of absolute unit lengths */
-/* Display example 1*/
-li a {
+/* Display example 1 */
+/* Attribute selector */
+li a[href^="#"]{
   display: block;
   color: #a89984;
   text-align: center;
@@ -87,13 +95,15 @@ li a {
   text-decoration: none;
 }
 
-/* Psuedo-class: hover*/
+/* Psuedo-class: hover */
+/* Psuedo-class selector */
 li a:hover {
   background-color: #3c3836;
 }
 
 /* Display example 2*/
-.obscene {
+/* Selector list */
+h3, .obscene {
     display:none;
 }
 
@@ -171,6 +181,7 @@ body {
   justify-content: center;
 }
 
+/* Child combinator */
 .flex-container > div {
   background-color: #a89984;
   color: #504945;
@@ -209,4 +220,24 @@ body {
         grid-row-end: span 1;
         background-color: #b16286;
     }
+}
+
+/* Descendant combinator */
+body main {
+    color: #a89984;
+}
+
+/* General Sibling Combinator*/
+main ~ footer {
+    color: #a89984;
+}
+
+/* Adjacent Sibling Combinator*/
+label + label {
+    color: #cc241d;
+}
+
+/* Element.class Combinator*/
+label.cc {
+    color: #cc241d;
 }
